# arm-emulator

./: .gitignore  Cargo.toml  README.md  auto_grader.py  build-translations.sh  gui_main.py  package-code.sh  package-windows.sh  package.sh  pyproject.toml  rustfmt.toml  sample-usage.py  version_info.txt
.cargo/: config.toml
.github/workflows/: build.yml
MinuteofProjectSupervisionMeeting/: 2025.10.15.txt  2025.10.29.txt  2025.10.6.txt  2025.11.13.txt  2025.11.19.txt  2025.11.5.txt  2025.12.3.txt  2026.1.21.txt  2026.1.28.txt  2026.1.7.txt  2026.2.18.txt  2026.3.11.txt  2026.3.4.txt
assembler/: __init__.py  assembled_output.py  assembler.py
assets/icons/: favicon.icns
assets/translations/: app_ar.ts  app_en.ts  app_es.ts  app_pl.ts  app_ru.ts
crates/emulator/: Cargo.toml
crates/emulator/src/: lib.rs  prelude.rs  tests.rs
crates/emulator/src/cpu/: mod.rs  tests.rs
crates/emulator/src/execution/: block_data_transfer.rs  branch.rs  data_processing.rs  memory_access.rs  mod.rs
crates/emulator/src/execution/tests/: block_data_transfer.rs  branch.rs  data_processing.rs  memory_access.rs  mod.rs
crates/emulator/src/instructions/: display.rs  mod.rs  tests.rs
crates/emulator/src/memory/: mod.rs  tests.rs
crates/emulator/src/peripherals/: gpio.rs  mod.rs  tests.rs
crates/emulator/src/system/: mod.rs  rng.rs
crates/emulator/src/testing/: mod.rs
crates/emulator_macros/: Cargo.toml
crates/emulator_macros/src/: lib.rs
docs/: CODEBASE.md  README.md
docs/architecture/: Breakpoints.md  CPU.md  Emulator.md  GUI.md
docs/development/: translations.md
emulator/: Cargo.toml
emulator/benches/: execution_benchmark.rs
emulator/src/: lib.rs  tests.rs
emulator/src/cpu/: display.rs  mod.rs  tests.rs
emulator/src/execution/: block_data_transfer.rs  branch.rs  branch_exchange.rs  data_processing.rs  memory_access.rs  mod.rs  multiply.rs  supervisor_call.rs
emulator/src/execution/tests/: data_processing.rs  memory_access.rs  mod.rs  multiply.rs
emulator/src/instructions/: display.rs  fields.rs  mod.rs  tests.rs
emulator/src/memory/: mod.rs  tests.rs
emulator/src/memory/unmanaged_chunk/: index.rs  mod.rs
emulator/src/peripherals/: gpio.rs
emulator/src/system/: rng.rs
examples/: grade_lab_01.py  grade_lab_02.py  grade_submission_01.py  lab_01.s  lab_02_blink_fib_completed.armcfg  lab_02_blink_fib_half_completed.armcfg  lab_02_blink_fib_starter.armcfg
gui/: language.py  main.py  main_window.py  resource.py
gui/controllers/: debugger_controller.py
gui/sample/: starter_code.py
gui/screens/: disassembly.py  editor.py  memory_view.py  tutorial_dialog.py
gui/widgets/: code_editor.py  cpu_panel.py  peripherals_panel.py  tab.py  title_bar.py
hardware/: __init__.py  gpio.py
hooks/: hook-arm_emulator_rs.py  hook-keystone.py
scripts/: build_translations.py
src/: error.rs  lib.rs  py_app_dir.rs  py_emulator.rs  py_error.rs  py_gpio_port.rs  py_memory.rs  py_peripheral.rs  py_range.rs  py_tracing.rs
xbin/: Cargo.toml
xbin/src/: main.rs
