[workspace]
members = ["crates/emulator"]
resolver = "3"

[package]
name = "arm_emulator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "arm_emulator_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
emulator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
emulator = { path = "crates/emulator" }
modular-bitfield = { version = "0.12.0" }
nom = { version = "8.0.0" }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
rand = { version = "0.9.2" }
thiserror = { version = "2.0.17" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["json"] }
