[workspace]
members = ["emulator"]
resolver = "3"

[package]
name = "arm_emulator"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "arm_emulator_rs"
crate-type = ["cdylib"]

[dependencies]
emulator = { workspace = true }

pyo3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
app_dirs2 = { version = "2.5.5" }

[workspace.dependencies]
emulator = { path = "emulator" }

modular-bitfield = { version = "0.13.1" }
nom = { version = "8.0.0" }
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rand = { version = "0.10.0" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["json"] }
