[workspace]
members = ["crates/emulator_macros", "emulator"]
resolver = "3"

[package]
name = "arm_emulator"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "arm_emulator_rs"
crate-type = ["cdylib"]

[dependencies]
emulator = { workspace = true }

app_dirs2 = { version = "2.5.5" }
derive_more = { workspace = true }
pyo3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
emulator = { path = "emulator" }
emulator_macros = { path = "crates/emulator_macros" }

modular-bitfield = { version = "0.13.1" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
rand = { version = "0.10.0" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["json"] }
derive_more = { version = "2.1.1", features = ["full"] }
