[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "arm_emulator"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "keystone-engine>=0.9.2",
    "pyqt6>=6.7.1"
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["pyinstaller>=6.16.0"]
