[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "arm_emulator"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "capstone==5.0.7",
    "keystone-engine>=0.9.2",
    "pyqt6>=6.7.1",
    "pyqtdarktheme>=2.1.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "deep-translator>=1.11.4",
    "lxml>=6.0.2",
    "pyinstaller>=6.16.0",
    "pyside6>=6.6.3.1",
]
