[package]
name = "emulator"
version = "0.1.3"
edition = "2024"

[dependencies]
emulator_macros = { workspace = true }

derive_more = { workspace = true }
modular-bitfield = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2" }

[[bench]]
name = "execution_benchmark"
harness = false
